<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">실버천국</string>
    <string name="error_message_network">네트워크 연결이 원활하지 않습니다</string>
    <string name="error_message_unknown">알 수 없는 오류가 발생하였습니다</string>

    <string name="title_Community">커뮤니티</string>
    <string name="title_recruit">채용관</string>
    <string name="title_user">마이페이지</string>



    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">로그인하기</string>
    <string name="join">회원가입하기</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">님이&#160;</string>
    <string name="alarm_comment">&#160;메세지를 남겼습니다.</string>
    <string name="alarm_follow">님이 당신의 계정을 팔로워하기 시작했습니다.</string>

    <!-- Comment -->
    <string name="send">보내기</string>

    <!-- Add Photo -->
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />


    <!-- 마이페이지 user string -->
    <string name="my_page">마이 페이지</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="phone_number">전화번호</string>
    <string name="address">주소</string>
    <string name="hobby">취미</string>
    <string name="birthday">생일</string>
    <string name="id">아이디</string>
    <string name="major">전공</string>
    <string name="myEmail">이메일</string>
    <string name="myPass">비밀번호</string>
    <string name="ai_info_update">AI로 정보 수정하기</string>
    <string name="smiley_face">스마일리 얼굴</string>
    <string name="android_robot">안드로이드 로봇</string>
</resources>
