<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp">

                        <TextView
                            android:id="@+id/textViewTitle"
                            android:layout_width="150dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/my_page"
                            android:textColor="@color/black"
                            android:layout_marginLeft="60dp"
                            android:textSize="30dp" />

                        <ImageView
                            android:id="@+id/backgroundImage"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_smile_face"
                            android:alpha="0.8"
                            android:layout_marginLeft="15dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewNameLabel"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginTop="30dp"
                    android:padding="3dp"/>
                <!-- Name Display -->
                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edit_text" />

                <!-- Age and Gender -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textViewAgeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:text="생일"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/textViewGenderLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="160dp"
                            android:text="@string/gender"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textViewBirthday"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:padding="8dp"
                            android:background="@drawable/rounded_edit_text" />

                        <TextView
                            android:id="@+id/textViewGender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:padding="8dp"
                            android:background="@drawable/rounded_edit_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewPhoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!-- Phone Number Display -->
                <TextView
                    android:id="@+id/textViewPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edit_text" />

                <TextView
                    android:id="@+id/textViewAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edit_text" />

                <TextView
                    android:id="@+id/textViewHobbLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/hobby"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!-- Hobby Display -->
                <TextView
                    android:id="@+id/textViewHobby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edit_text" />

                <TextView
                    android:id="@+id/textViewMajorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/major"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edit_text" />

                <TextView
                    android:id="@+id/textViewEmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/myEmail"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edit_text" />

                <TextView
                    android:id="@+id/textViewPassWordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/myPass"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edit_text" />

                <TextView
                    android:id="@+id/textViewFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/ai_info_update"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ai_edit_button"/>
        </LinearLayout>
</ScrollView>
